# spendthrift

./: .gitignore  README.md  pyproject.toml  report.py  setup.py
.circleci/: config.yml
chase_spend_reporter/: report.py
git-hooks/: pre-commit
scripts/: autoformat.sh  lint.sh  test.sh  utils.sh
spendthrift/cli/: kind.py  st.py
spendthrift/core/: transaction.py  utils.py
tests/core/: test_utils.py
