[tool.poetry]
name = "spendthrift"
version = "0.5.0"
description = ""
authors = ["petgoldfish <g.raghav.sai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
click = "8.1.3"
python = "3.10.4"
tabulate = "0.8.10"

[tool.poetry.group.dev.dependencies]
black = "22.8.0"
isort = "5.10.1"
mypy = "0.982"
pylint = "2.15.3"
types-tabulate = "0.8.11"


[tool.poetry.group.test.dependencies]
pytest = "7.1.3"
pytest-cov = "4.0.0"

[tool.poetry.scripts]
st = "spendthrift.cli.st:cli"

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
